@@ -1,4 +1,6 @@
 HEAD
+    + Added in the config file the nameserver used in the setup script
+    + Added support to the message directive in xml output report
     + Fixed support in yaml for the hw-addr directive that was broken
     + Fixed support in yaml for the bridges and manual-bridging directives
     + Properly write /etc/resolv.conf file in the setup script
